spacing and alignment issues, contact form configured

--- a/resources/css/bz.css
+++ b/resources/css/bz.css
@@ -18,6 +18,12 @@ a {
 	color: #6b2868;
 	
 }
+.light {
+	font-family: 'Raleway', sans-serif;
+	font-weight: 500; 
+	text-transform: uppercase;
+	font-size: .9em;
+	}
 .overlay {
 	background-color: #fbfbfb;
 	}
@@ -33,7 +39,7 @@ p {
 	font-weight:500;
 	}
 .banner {
-	background-color: rgba(17,17,17,0.05);
+	background-color: #fbfbfb;
 	border-radius: 3px;
 	}
 .box-shadow {
@@ -59,7 +65,7 @@ p {
     font-size: 12px;
     margin: 14px 0px;
     cursor: pointer;
-    margin-bottom: 15px;
+    margin-bottom: 22px;
     width: 60%;
     border-radius: 0px;
 	padding: 14px 0px;
@@ -553,6 +559,11 @@ img {
 	background-color: rgba(17,17,17,0.05);
 	margin-bottom: 30px;
 }
+.container-card-video {
+    padding: 10px 55px;
+    background-color: #fbfbfb;
+    margin-bottom: 30px;
+}
 .category-text {
 	font-size: .8em;
 	text-transform: uppercase;
@@ -662,9 +673,17 @@ playlist
     color: #fff;
     padding-top: 65px;
     padding-bottom: 65px;
+
+}
+.video-title {
+	padding-bottom: 30px;
 }
 .video-list {
-	margin: 30px 0px;
+	margin: 0px 0px;
+}
+.video-list h3 {
+	text-align: left;
+    text-transform: uppercase;
 }
 .categories {
 	background-color: #fff;
@@ -695,7 +714,7 @@ playlist
 	color: purple;
 }
 .video-list {
- 	padding-top: 30px;
+ 	padding-top: 0px;
 }
 .video-list h2 {
 	color:purple;
@@ -706,6 +725,19 @@ playlist
     margin-top: 0px;
 }
 /**********Contact page***********/
+.contact-header {
+	background-image: url(../img/background.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+
+}
+.contact-header h1 {
+	color: #fff;
+    padding-top: 65px;
+    padding-bottom: 65px;
+}
+
 .contact {
 	padding: 40px 0px;
 }
@@ -729,6 +761,11 @@ input[type=submit] {
     background-color: purple;
 	margin-top: 15px;
     color: #fff;
+}
+textarea {
+	width: 100%;
+    height: 200px;
+    padding: 20px 10px;
 }
 /*************Products*****************/
 .products {
